--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TestGOOD.loader.js";
+      var loaderUrl = buildUrl + "/GoodSoft.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestGOOD.data",
-        frameworkUrl: buildUrl + "/TestGOOD.framework.js",
-        codeUrl: buildUrl + "/TestGOOD.wasm",
+        dataUrl: buildUrl + "/GoodSoft.data",
+        frameworkUrl: buildUrl + "/GoodSoft.framework.js",
+        codeUrl: buildUrl + "/GoodSoft.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CodeshopStudio",
         productName: "Goods Sort 3D",
@@ -98,7 +98,6 @@
         canvas.style.height = "1920px";
       }
 
-      canvas.style.background = "url('" + buildUrl + "/TestGOOD.jpg') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
